--- a/module-3/03_CSS_Grid/lecture/style.css
+++ b/module-3/03_CSS_Grid/lecture/style.css
@@ -1,5 +1,45 @@
 
+.container {
+    display: grid;
+    grid-template-columns: 200px auto 200px;
+    grid-template-rows: 10vh 80 vh 10 vh;
+    grid-template-areas:
+    "ga-header  ga-header   ga-header"
+    "ga-nav     ga-menu     ga-events"
+    "ga-footer  ga-footer   ga-footer";
+}
 
+header {
+    grid-area: ga-header;
+}
+
+#menu-nav {
+    grid-area: ga-nav;
+}
+
+main {
+    grid-area: ga-menu;
+}
+
+#upcoming-events {
+    grid-area: ga-events;
+}
+
+footer {
+    grid-area: ga-footer;
+}
+
+@media screen and (max-width: 786px) {
+    .container {
+        grid-template-columns: auto;
+        grid-template-areas: 
+        "ga-header"
+        "ga-nav"
+        "ga-menu"
+        "ga-events"
+        "ga-footer";
+    }
+}
 
 /***** enter grid CSS above this line *****/
 
