Submission 2 for 01 Intro HTML and CSS

--- a/module-3/01_Intro_HTML_CSS/exercise/styles.css
+++ b/module-3/01_Intro_HTML_CSS/exercise/styles.css
@@ -7,6 +7,10 @@ h1 {
     text-align: center;                                             
 }
 
+h2 {
+    text-decoration-line: underline;
+}
+
 #financeImage {
     width: 300px;
     border: 20px groove #1A472A;
