Submitting late HW 04 CSS Flexbox

--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-2/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-2/style.css
@@ -4,6 +4,8 @@ body {
 }
 
 header {
+  display: flex;
+  flex-direction: row;
   background-color: #F0F0F0;
   padding: 20px;
 }
@@ -13,6 +15,8 @@ header {
 }
 
 ul {
+  display: flex;
+  flex-direction: row;
   margin: 0;
   padding: 0;
   list-style-type: none;
