--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-4-flex-grow/step-1/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-4-flex-grow/step-1/style.css
@@ -8,7 +8,13 @@ body {
   background-color: #F0F0F0;
 }
 
+div.container {
+  display: flex;
+  flex-direction: row;
+}
+
 .box {
+  flex-grow: 1;
   padding: 40px 55px;
   margin: 15px 0;
   background-color: #00AFEF;
