--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-3/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-3/style.css
@@ -4,8 +4,18 @@ body {
 }
 
 header {
+  display: flex;
+  flex-direction: row;
   background-color: #F0F0F0;
   padding: 20px;
+}
+
+header > nav {
+  flex-grow: 1;
+}
+
+header > nav > ul {
+  justify-content: center;
 }
 
 .logo {
@@ -13,6 +23,8 @@ header {
 }
 
 ul {
+  display: flex;
+  flex-direction: row;
   margin: 0;
   padding: 0;
   list-style-type: none;
