--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-5/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-5/style.css
@@ -4,8 +4,29 @@ body {
 }
 
 header {
+  display: flex;
+  flex-direction: row;
   background-color: #F0F0F0;
   padding: 20px;
+}
+
+header > nav {
+  flex-grow: 0;
+}
+
+header > nav > ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: flex-end;
+}
+
+header > div.spacer {
+  flex-grow: 1;
+}
+
+header > a.my-account {
+  flex-grow: 0;
 }
 
 .logo {
@@ -13,6 +34,8 @@ header {
 }
 
 ul {
+  display: flex;
+  flex-direction: row;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -36,8 +59,4 @@ a:visited {
 a:hover {
   color: #00AFEF;
   text-decoration: underline;
-}
-
-.my-account img {
-  width: 40px;
 }
