--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-2-align-content-row/step-2/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-2-align-content-row/step-2/style.css
@@ -8,6 +8,12 @@ body {
   background-color: #F0F0F0;
 }
 
+div.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .box {
   padding: 40px 55px;
   margin: 15px 0;
