--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-3-align-vertically/step-1/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-3-align-vertically/step-1/style.css
@@ -7,6 +7,12 @@ body {
 .container {
   background-color: #F0F0F0;
   height: 500px;
+  align-items: center;
+}
+
+div.container {
+  display: flex;
+  flex-direction: row;
 }
 
 .box {
