--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-3-align-vertically/step-4/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-3-align-vertically/step-4/style.css
@@ -7,6 +7,14 @@ body {
 .container {
   background-color: #F0F0F0;
   height: 500px;
+  align-items: flex-start;
+}
+
+div.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .box {
@@ -15,4 +23,3 @@ body {
   color: #fff;
   border: solid 1px #777;
 }
-
