--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-6-flex-order/step-1/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-6-flex-order/step-1/style.css
@@ -16,3 +16,13 @@ body {
   border-radius: 999px;
   margin: 0 10px;
 }
+
+div.bio:nth-child(1){
+  display: flex;
+  flex-direction: row;
+}
+
+div.bio:nth-child(2){
+  display: flex;
+  flex-direction: row-reverse;
+}
