--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-2/css/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-2/css/style.css
@@ -1,4 +1,6 @@
 body {
+  display: flex;
+  flex-direction: row;
   margin: 0;
   padding: 0;
   min-height: 100vh;
@@ -7,18 +9,48 @@ body {
 }
 
 #left-panel {
+  display: flex;
+  flex-direction: column;
+  width: 35%;
   background-color: #F7F7F7;
 }
 
+#left-panel > header {
+  flex-grow: 0;
+}
+
+#left-panel > h2 {
+  flex-grow: 0;
+}
+
+#left-panel > p {
+  flex-grow: 0;
+}
+
 ul.social-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   list-style-type: none;
   margin: 20px 20px;
   padding: 0;
 }
 
-nav {}
+#left-panel > nav {
+  flex-grow: 1;
+}
 
-#right-panel {}
+#left-panel > footer {
+  flex-grow: 0;
+}
+
+#right-panel {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
 
 /* YOU WON'T NEED TO CHANGE ANY STYLES BELOW THIS LINE */
 
