Resubmit 04 CSS Flexbox

--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-2/css/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-2/css/style.css
@@ -11,7 +11,7 @@ body {
 #left-panel {
   display: flex;
   flex-direction: column;
-  width: 35%;
+  flex-basis: 35%;
   background-color: #F7F7F7;
 }
 
